--- a/exercises/regex_exercises.ipynb
+++ b/exercises/regex_exercises.ipynb
@@ -22,41 +22,258 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9e8027d8",
+   "execution_count": 2,
+   "id": "0ec640eb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def is_vowel(string):\n",
+    "    return bool(re.search(r'[aeiou]', string, re.IGNORECASE))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "29f5e07e",
+   "id": "87e6189a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (3446811745.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [3]\u001b[0;36m\u001b[0m\n\u001b[0;31m    True\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_vowel('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c6922cb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_vowel('apple')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48b343eb",
+   "metadata": {},
+   "source": [
+    "Write a function named is_valid_username that accepts a string as input. A valid username starts with a lowercase letter, and only consists of lowercase letters, numbers, or the _ character. It should also be no longer than 32 characters. The function should return either True or False depending on whether the passed string is a valid username."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1f49c5e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_valid_username(string):\n",
+    "    return bool(re.search(r'^[a-z][0-9_],{0,31}$', string)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bfaa6e2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_valid_username('aaaaaaaaaa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4e03bd0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_valid_username('c_odeup')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b655b85",
+   "metadata": {},
+   "source": [
+    "Write a regular expression to capture phone numbers. It should match all of the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "198fdfbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['(210) 867 5309', '+1 210.867.5309', '867-5309', '210-867-5309']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers = ['(210) 867 5309',\n",
+    "           '+1 210.867.5309',\n",
+    "            '867-5309',\n",
+    "            '210-867-5309']\n",
+    "numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0a53289a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['(210) 867 5309']\n",
+      "['+1 210.867.5309']\n",
+      "['867-5309']\n",
+      "['210-867-5309']\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "for number in numbers:\n",
+    "    print(re.findall(r'.+\\d+.?.\\d+.\\d+$', number))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "144a2d4b",
+   "metadata": {},
+   "source": [
+    "Use regular expressions to convert the dates below to the standardized year-month-day format."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "87e6189a",
+   "execution_count": 10,
+   "id": "a4d5377e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dates = ['02/04/19'\n",
+    "'02/05/19'\n",
+    "'02/06/19'\n",
+    "'02/07/19'\n",
+    "'02/08/19'\n",
+    "'02/09/19'\n",
+    "'02/10/19']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "75d424b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 're' has no attribute 'sb'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [11]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m regexp \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m(\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md\u001b[39m\u001b[38;5;132;01m{2}\u001b[39;00m\u001b[38;5;124m)/(\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md\u001b[39m\u001b[38;5;132;01m{2}\u001b[39;00m\u001b[38;5;124m/(\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124md\u001b[39m\u001b[38;5;132;01m{2}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;66;03m# broken up for each componenet of the date\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m date \u001b[38;5;129;01min\u001b[39;00m dates:\n\u001b[1;32m      4\u001b[0m   \u001b[38;5;66;03m#  print(re.findall(regexp, date))\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mre\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msb\u001b[49m(regexp, \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m), date)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 're' has no attribute 'sb'"
+     ]
+    }
+   ],
+   "source": [
+    "regexp = r'(\\d{2})/(\\d{2}/(\\d{2})' # broken up for each componenet of the date\n",
+    "\n",
+    "for date in dates:\n",
+    "  #  print(re.findall(regexp, date))\n",
+    "    print(re.sb(regexp, r''), date)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b47ec11",
+   "metadata": {},
+   "source": [
+    "Write a regex to extract the various parts of these logfile lines:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6922cb5",
+   "id": "baa01887",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GET /api/v1/sales?page=86 [16/Apr/2019:193452+0000] HTTP/1.1 {200} 510348 \"python-requests/2.21.0\" 97.105.19.58\n",
+    "POST /users_accounts/file-upload [16/Apr/2019:193452+0000] HTTP/1.1 {201} 42 \"User-Agent: Mozilla/5.0 (X11; Fedora; Fedora; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.86 Safari/537.36\" 97.105.19.58\n",
+    "GET /api/v1/items?page=3 [16/Apr/2019:193453+0000] HTTP/1.1 {429} 3561 \"python-requests/2.21.0\" 97.105.19.58"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e334b7ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for log in logs:\n",
+    "    print(re.findall(r'[A-Z]+)\\s(.+?)\\s\\[(.+)\\]\\s(.+?)\\s(\\d+)\\s(\".+\")\\s(.+)', log) #break this down"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "523ab7d3",
    "metadata": {},
    "outputs": [],
    "source": []
